[gd_scene load_steps=10 format=3 uid="uid://bydrpyjblgukh"]

[ext_resource type="Script" path="res://Scene/Pause/pause.gd" id="1_osl1n"]
[ext_resource type="Texture2D" uid="uid://cw0oif8eemqrh" path="res://Assets/Button/Pause menu/board.png" id="1_yi5ns"]
[ext_resource type="Texture2D" uid="uid://ccfrmnil3ujod" path="res://Assets/Button/Pause menu/resume/preview.png" id="2_bacx2"]
[ext_resource type="Shader" path="res://Scene/Pause/pause.gdshader" id="2_hm3q4"]
[ext_resource type="Texture2D" uid="uid://73ohyrnf0tap" path="res://Assets/Button/Pause menu/restart/preview.png" id="3_imtp6"]
[ext_resource type="Texture2D" uid="uid://55kythsv8rp4" path="res://Assets/Button/Pause menu/exit/preview.png" id="4_3810a"]
[ext_resource type="Texture2D" uid="uid://v1fwj7cxchuo" path="res://Assets/Button/Settings/preview.png" id="5_cim2q"]
[ext_resource type="Texture2D" uid="uid://4et8mt3d82fb" path="res://Assets/Button/Info/preview.png" id="6_7umyn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yhonr"]
shader = ExtResource("2_hm3q4")
shader_parameter/amount = 1.0

[node name="pause" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_osl1n")

[node name="Blur_Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_yhonr")
layout_mode = 0
offset_left = -5.0
offset_top = -15.0
offset_right = 1935.0
offset_bottom = 1076.0

[node name="Pause_Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 201.0
offset_right = 1273.0
offset_bottom = 842.0
texture = ExtResource("1_yi5ns")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 742.0
offset_top = 314.0
offset_right = 1899.0
offset_bottom = 1580.0
scale = Vector2(0.373199, 0.393089)

[node name="Menu_Vertical" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="TextureButton" parent="MarginContainer/Menu_Vertical"]
layout_mode = 2
texture_normal = ExtResource("2_bacx2")
texture_pressed = ExtResource("2_bacx2")
texture_hover = ExtResource("2_bacx2")

[node name="Gap" type="MarginContainer" parent="MarginContainer/Menu_Vertical"]
layout_mode = 2

[node name="Restart" type="TextureButton" parent="MarginContainer/Menu_Vertical"]
layout_mode = 2
texture_normal = ExtResource("3_imtp6")
texture_pressed = ExtResource("3_imtp6")
texture_hover = ExtResource("3_imtp6")

[node name="Gap2" type="MarginContainer" parent="MarginContainer/Menu_Vertical"]
layout_mode = 2

[node name="Exit" type="TextureButton" parent="MarginContainer/Menu_Vertical"]
layout_mode = 2
texture_normal = ExtResource("4_3810a")
texture_pressed = ExtResource("4_3810a")
texture_hover = ExtResource("4_3810a")

[node name="Gap3" type="MarginContainer" parent="MarginContainer/Menu_Vertical"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Menu_Horizontal" type="HBoxContainer" parent="MarginContainer/Menu_Vertical"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Gap4" type="MarginContainer" parent="MarginContainer/Menu_Vertical/Menu_Horizontal"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2

[node name="Setting_button" type="TextureButton" parent="MarginContainer/Menu_Vertical/Menu_Horizontal"]
layout_mode = 2
texture_normal = ExtResource("5_cim2q")
texture_pressed = ExtResource("5_cim2q")
texture_hover = ExtResource("5_cim2q")
stretch_mode = 0

[node name="Gap" type="MarginContainer" parent="MarginContainer/Menu_Vertical/Menu_Horizontal"]
process_mode = 2
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Info_button" type="TextureButton" parent="MarginContainer/Menu_Vertical/Menu_Horizontal"]
layout_mode = 2
texture_normal = ExtResource("6_7umyn")
texture_pressed = ExtResource("6_7umyn")
texture_hover = ExtResource("6_7umyn")
stretch_mode = 0

[connection signal="pressed" from="MarginContainer/Menu_Vertical/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/Menu_Vertical/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/Menu_Vertical/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/Menu_Vertical/Menu_Horizontal/Setting_button" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="MarginContainer/Menu_Vertical/Menu_Horizontal/Info_button" to="." method="_on_info_button_pressed"]
